# SAP

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.old  README  README.md  config.status  configure  configure.ac  sap.example.pl  sap.pl
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
debug/20120510/: bug-report.txt
src/: Makefile  Makefile.am  Makefile.in  bestrot.c  bestrot.d  bestrot.h  cones.c  cones.d  cones.h  config.h  config.h.in  doxygen.cfg  galloc.h  geom.c  geom.d  geom.h  matrix.c  matrix.d  matrix.h  pdbprot.c  pdbprot.d  ql.c  ql.d  ql.h  sap.c  sap.h  siva.c  siva.d  siva.h  sort.c  sort.d  sort.h  student.h  stutest.c  stutest.d  util.c  util.d  util.h
src/.deps/: bestrot.Po  cones.Po  geom.Po  matrix.Po  pdbprot.Po  ql.Po  sap.Po  siva.Po  sort.Po  stutest.Po  util.Po
tests/: Makefile  Makefile.am  Makefile.in  plot.rms  test1.sh  test2.sh
