#===============================================================================
# Makefile.am : for automake
# #===============================================================================
#
noinst_DATA = \
	1bom_atm.pdb \
	1igl_atm.pdb \
	sapout.pdb

noinst_SCRIPTS = \
	test1.sh \
	test2.sh

EXTRA_DIST = $(noinst_DATA) $(noinst_SCRIPTS)

TESTS = $(noinst_SCRIPTS)

